fixed button size and vertically aligned text

--- a/css/style.css
+++ b/css/style.css
@@ -102,11 +102,14 @@ h1 {
     font-family: proxima-nova, sans-serif;
     font-weight: 400;
     width: 100%;
-    height: 20rem;
+    height: 15.5rem;
     margin: 0;
     padding: 0;
     border: none;
     box-shadow: 0px 3px 20px rgba(0, 0, 0, .16);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
